# Real_Time_Control_Room

./: .env.example  .gitignore  README.md  ingest.py  pyproject.toml  run.py
app/: __init__.py  config.py  ingestion.py  main.py  models.py  routes.py  services.py
app/templates/: dashboard.html
simulator/: instruments.csv  stream_generator.py
