[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "real-time-operations-control-room"
version = "0.1.0"
description = "A real-time event ingestion, monitoring and decision-support platform."
requires-python = ">=3.11"
dependencies = [
    "Flask>=3.0,<4.0",
    "Flask-SQLAlchemy>=3.1,<4.0",
    "psycopg2-binary>=2.9,<3.0",
    "python-dotenv>=1.0,<2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "ruff>=0.8"
]

[tool.setuptools.packages.find]
include = ["app*", "simulator*"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]